# cpp-basics-classwork

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake
include/: 14_headers.hpp  15_structures.hpp
src/: 01_main.cpp  02_types.cpp  03_operators.cpp  04_branching.cpp  05_loops.cpp  06_functions.cpp  07_iostream.cpp  08_pointers.cpp  09_static_array.cpp  10_references.cpp  11_function_args.cpp  12_memory.cpp  13_dynamic_array.cpp  14_headers.cpp  15_structures.cpp
